fix: accent color in dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -107,7 +107,7 @@ body {
 }
 
 .dark {
-  --accent: oklch(92.449% 0.22072 122.755);
+  --accent: oklch(85.449% 0.22072 122.755);
   --primary: oklch(0.191 0.005 286.1);
   --primary-50: oklch(0.191 0.005 286.1 / 0.5);
   --primary-30: oklch(0.191 0.005 286.1 / 0.3);
